k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dallio-tasks
  labels:
    app.kubernetes.io/name: dallio-tasks
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dallio-tasks
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 3000
      targetPort: http
